fixed the overflow-x for the mobile submenu

--- a/style.css
+++ b/style.css
@@ -10,7 +10,6 @@
 
 body {
     background-color: #f6f7f8;
-    overflow-x: hidden;
 }
 
 @font-face {
